--- a/index.css
+++ b/index.css
@@ -191,12 +191,17 @@ body {
                 padding: 10px;
                 height: auto;
                 margin-bottom: 20px;
+                align-items: center;
+                text-align: center;
+                gap: 83px;
             }
         
             .navbar {
-                position: static; /* remove o fixo pra caber no header */
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                position: static;
                 background-color: transparent;
-                gap: 15px;
             }
         
             .navbar a {
@@ -212,7 +217,7 @@ body {
             }
         
             .logo {
-                height: 40px;
+                height: 60px;
                 margin: 5px 0;
             }
         
